--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./src/index.js"
@@ -12,13 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "env": "^0.0.2",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.1",
-    "nodemon": "^2.0.22",
-    "sequelize": "^6.31.1"
+    "nodemon": "^2.0.22"
   }
 }
