--- a/scraper/package.json
+++ b/scraper/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "puppeteer": "19.5.0 "
+    "express": "^4.18.2"
   },
   "devDependencies": {
+    "puppeteer": "^20.5.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   }
